[gd_scene load_steps=7 format=3 uid="uid://c3x410vm6ijfu"]

[ext_resource type="Script" path="res://Towers/tower.gd" id="1_pacw5"]
[ext_resource type="PackedScene" uid="uid://d4c1ncu1dfiha" path="res://Towers/wooden_bullet.tscn" id="2_jfm5i"]
[ext_resource type="Texture2D" uid="uid://c8bbdkkqb4w82" path="res://Towers/wooden_tower/7.2.1.png" id="2_wj1x7"]
[ext_resource type="Texture2D" uid="uid://bfj25new42fu2" path="res://Towers/wooden_tower/7.2.png" id="3_k6bi7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c6qfm"]
radius = 156.45

[sub_resource type="SpriteFrames" id="SpriteFrames_t1gjs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wj1x7")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_k6bi7")
}],
"loop": true,
"name": &"passive",
"speed": 5.0
}]

[node name="wooden_tower" type="Node2D"]
script = ExtResource("1_pacw5")
reload_time = 1.0

[node name="wooden_bullet" parent="." instance=ExtResource("2_jfm5i")]

[node name="visibility_radius" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="visibility_radius"]
shape = SubResource("CircleShape2D_c6qfm")

[node name="animation_wooden_tower" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_t1gjs")
animation = &"passive"
autoplay = "passive"

[node name="reload_timer" type="Timer" parent="."]
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = -43.0
offset_top = -55.0
offset_right = 54.0
offset_bottom = -33.0

[node name="upgrade" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Upg"

[node name="cell" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Cell"

[node name="move" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Move"

[connection signal="area_entered" from="visibility_radius" to="." method="_on_visibility_radius_area_entered"]
[connection signal="area_exited" from="visibility_radius" to="." method="_on_visibility_radius_area_exited"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
[connection signal="pressed" from="HBoxContainer/upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="HBoxContainer/cell" to="." method="_on_cell_pressed"]
